# tt1_fasttext

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  cli.cpp  cli.h  data_file.h  main.cpp  main_tst.cpp  tei_directory.cpp  tei_directory.h  token_extractor.h  train_and_test.sh  tst_data_file.cpp  tst_token_extractor.cpp
